Alignment issues with images and background of b

--- a/Greenhill_Sarah_project2/css/main.css
+++ b/Greenhill_Sarah_project2/css/main.css
@@ -12,7 +12,7 @@
 
 #wrapper { 
 	margin: 0 auto; 
-	width: 1100px;
+	width: 1400px;
 } 
 
 /* Navigation */
@@ -204,7 +204,7 @@ ol {
 /* Images */
 
 #imgContainer {  
-    padding-left: 50px;                     
+    padding-left: 40px;                     
 	margin: 0 auto;
 	border: none;
 	text-align: center;
